tests/compile_fail/try_catch_lifetimes.stderr
error[E0597]: `try_catch` does not live long enough
  --> $DIR/try_catch_lifetimes.rs:12:14
   |
10 |   let _leaked = {
   |       ------- borrow later stored here
11 |     let mut try_catch = v8::TryCatch::new(scope);
12 |     let tc = try_catch.enter();
   |              ^^^^^^^^^ borrowed value does not live long enough
...
17 |   };
   |   - `try_catch` dropped here while still borrowed
